# barobo-custom-actions

./: .gitmodules  CMakeLists.txt  README.md  WIX.template.in  cxx_flag_overrides.cmake
src/: copydirectory.cpp  copydirectory.hpp  customactions.cpp  msi.cpp  msi.hpp  uninstallnsispackage.cpp
